# taxodist-py

./: NEWS.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
taxodist/: __init__.py  distance.py  fetch.py  utils.py
tests/: test_distance.py
